--- a/download_ETC_data/etc_config.ini
+++ b/download_ETC_data/etc_config.ini
@@ -1,4 +1,4 @@
 [setting]
-download_path = E:/ETC/download
-combination_path = E:/ETC/combination
+download_path = D:/ETC_Data/download
+combination_path = D:/ETC_Data/combination
 data_timestamp = 5 
